# langgraph-pharma-marketing

./: .gitignore  QUICK_START.md  README.md  demo.py  pyproject.toml
data/: drug_notices.json
src/: app.py
src/agents/: __init__.py  specialist_agents.py  supervisor.py
src/config/: settings.py
src/graph/: __init__.py  state.py  workflows.py
src/monitoring/: logging_config.py
src/retrieval/: __init__.py  retrieval_strategies.py  vector_store.py
src/utils/: __init__.py  error_handling.py
