[project]
name = "pharma-marketing-generator"
version = "3.0.0"
description = "Focused GenAI Solution for Compliant Pharmaceutical Marketing Phrase Generation with LangGraph"
authors = [
    {name = "Alessandro Ivashkevich", email = "alessandro.iva@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    # Core AI/ML - LangGraph and LangChain ecosystem
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.1.0",
    
    # Vector DB and Retrieval - RAG System
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    
    # API and Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.31.0",
    
    # Data Validation and Settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Error Handling and Resilience
    "tenacity>=8.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    
    # Code Quality
    "black>=24.0.0,<25.0.0",
    "ruff>=0.2.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    
    # Monitoring (optional)
    "prometheus-client>=0.19.0,<1.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
